🛡️ Sentinel: [CRITICAL] Prevent process listing exposure of database credentials
* Replaced `Runtime.getRuntime().exec` with `ProcessBuilder` in `AuditLogManager`
* Removed `--password` argument from the command line array.
* Injected database password via `MYSQL_PWD` environment variable to securely pass credentials to `mysqldump`.
* Created `.jules/sentinel.md` entry.

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>